@@ -10,7 +10,7 @@
 
 package org.junit.platform.suite.api;
 
-import static org.apiguardian.api.API.Status.MAINTAINED;
+import static org.apiguardian.api.API.Status.DEPRECATED;
 
 import java.lang.annotation.Documented;
 import java.lang.annotation.ElementType;
@@ -43,11 +43,14 @@ import org.apiguardian.api.API;
  *
  * @since 1.0
  * @see org.junit.platform.runner.JUnitPlatform
+ * @deprecated since 1.8, in favor of the {@link Suite @Suite} support provided by
+ * the {@code junit-platform-suite-engine} module; to be removed in JUnit Platform 2.0
  */
 @Retention(RetentionPolicy.RUNTIME)
 @Target(ElementType.TYPE)
 @Inherited
 @Documented
-@API(status = MAINTAINED, since = "1.0")
+@API(status = DEPRECATED, since = "1.8")
+@Deprecated
 public @interface UseTechnicalNames {
 }
